@@ -4,6 +4,10 @@ AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO 
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
 2007/02/08
+	* Modified Spider Web so it can instantly retrap a target, rather than
+	  idling on the ground waiting for a new target.
+	* Cleaned up some the rude-attacked code, being attacked while under spider
+	  web now triggers rude-attacked. [Skotlex]
 	* Added a missing null pointer check in clif_parse_globalmessage
 	* Fixed the new socket code, which was triggering the inactivity timeout
 	  on the servers' listening sockets
